2015-12-17  Jason Merrill  <jason@redhat.com>

	PR c++/67550
	* init.c (constant_value_1): Don't return a CONSTRUCTOR missing
	non-constant elements.

	PR c++/67576
	PR c++/25466
	* rtti.c (build_typeid): Use save_expr, not stabilize_reference.

2015-12-16  Patrick Palka  <ppalka@gcc.gnu.org>

	PR c++/16333
	PR c++/41426
	PR c++/59879
	PR c++/66895
	* typeck.c (convert_for_initialization): Don't perform an early
	decaying conversion if converting to a class type.

2015-12-16  Patrick Palka  <ppalka@gcc.gnu.org>

	* tree.c (cp_tree_operand_length): Define in terms of
	cp_tree_code_length.

2015-12-16  Martin Sebor  <msebor@redhat.com>

	PR objc++/68932
	* decl.c (grokdeclarator): Avoid assuming ctype is non-null when
	checking the validity of a flexible array member.

2015-12-16  Paolo Carlini  <paolo.carlini@oracle.com>

	* pt.c (comp_template_args): Remove.
	(comp_template_args_with_info): Rename to comp_template_args;
	not static.
	(add_pending_template): Adjust call.
	* cp-tree.h (comp_template_args): Add default arguments.

2015-12-16  Jason Merrill  <jason@redhat.com>

	PR c++/68309
	* pt.c (instantiate_decl): Revert earlier change.

	PR c++/63628
	* pt.c (tsubst_pack_expansion): Also make dummy decls if
	retrieve_local_specialization fails.

2015-12-16  David Malcolm  <dmalcolm@redhat.com>

	* parser.c (cp_lexer_peek_conflict_marker): New function.
	(cp_parser_error): Detect conflict markers and report them as
	such.

2015-12-15  Martin Sebor  <msebor@redhat.com>

	PR c++/42121
	PR c++/68478
	PR c++/68613
	PR c++/68689
	PR c++/68710
	* class.c (walk_subobject_offsets): Avoid assuming type domain
	is non-null or has an upper bound.
	(layout_class_type): Include type size in error message.
	(flexmems_t): New type.
	(field_nonempty_p, find_flexarrays, diagnose_flexarrays)
	(check_flexarrays): New	functions.
	(finish_struct_1): Call check_flexarrays.
	* decl.c (compute_array_index_type): Distinguish flexible array
	members from zero-length arrays.